# background-removal

./: README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
flows/test/: .flow.ui.oo.json  flow.oo.yaml
flows/tets/: flow.oo.yaml
oo-locales/: en.json  zh-CN.json
subflows/background-remove/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/local-file-removebg/: subflow.oo.yaml
tasks/background-remove/: __init__.py  task.oo.yaml
tasks/removebg/: __init__.py  task.oo.yaml
tasks/url-file-removebg/: __init__.py  task.oo.yaml
